overflow bug fixed.

--- a/assets/style/responsive.css
+++ b/assets/style/responsive.css
@@ -1292,6 +1292,10 @@
 }
 
 @media screen and (min-width:1200px) {
+    body{
+        overflow: hidden;
+    }
+     
     .navbar {
         position: fixed;
     }
