--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -16,7 +16,6 @@
 }
 
 html {
-    overflow-x: hidden;
     scroll-behavior: smooth;
     scroll-padding-top: 6rem;
     background-color: rgb(221, 197, 221);
@@ -105,12 +104,12 @@ html {
     background-color: #333;
     color: white;
     border: none;
-    padding-left: 25px;
 }
 
 .icon-button.active {
     background-color: #333;
     color: white;
+    padding-left: 25px;
 }
 
 #datetime-container {
@@ -217,11 +216,26 @@ tbody tr:nth-child(even) {
 
 @import url('https://fonts.googleapis.com/css2?family=Aclonica&family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Caveat:wght@400..700&family=Inter:wght@100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poetsen+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Tourney:ital,wght@0,100..900;1,100..900&display=swap');
 
-
 #appointment-section {
+    padding-top: 5%;
     width: 100%;
-    height: auto;
     text-align: center;
+}
+
+#customer-section {
+        padding-top: 5%;
+}
+
+#agent-section{
+        padding-top: 5%;
+}
+
+#property-section{
+        padding-top: 5%;
+}
+
+#payment-section {
+        padding-top: 5%;
 }
 
 #appointment-frame {
@@ -332,7 +346,6 @@ tbody tr:nth-child(even) {
     border: 1px solid #ccc;
     border-radius: 5px;
     background-color: #28a745;
-    ;
     color: white;
     background-repeat: no-repeat;
     background-position: right 5px center;
